# zephyr-application-template

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
.west/: config
apps/: west.yml
apps/template/: CMakeLists.txt  prj.conf
apps/template/conf/: debug.conf  release.conf
apps/template/include/: main.h  version.h.in
apps/template/src/: main.c
